--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./homework/index.html"></a>
     <div>Misha</div>
   </body>
 </html>
