--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./homework/index.html"></a>
+    <a href="./homework/index.html">Резюме</a>
     <div>Misha</div>
   </body>
 </html>
