--- a/homework.git/index.html
+++ b/homework.git/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=d, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Git</title>
   </head>
   <body>
-    <a href="./homework/index.html">Резюме</a>
-    <div>Misha</div>
+    <ol>
+      <li><a href="./homework HTML/index.html">Резюме</a></li>
+      <li><a href="./homework.git/index.html">Git</a></li>
+    </ol>
   </body>
 </html>
