add new page 2.0

--- a/homework.git/index.html
+++ b/homework.git/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <ol>
-      <li><a href="./homework HTML/index.html">Резюме</a></li>
+      <li><a href="./homework.html/index.html">Резюме</a></li>
       <li><a href="./homework.git/index.html">Git</a></li>
     </ol>
   </body>
