fix: updated project structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=d, initial-scale=1.0" />
-    <title>Git</title>
+    <title>Homeworks</title>
   </head>
   <body>
     <ol>
-      <li><a href="./homework.html/index.html">Резюме</a></li>
-      <li><a href="./homework.git/index.html">Git</a></li>
+      <li><a href="./Homeworks/index.html">Homeworks</a></li>
     </ol>
   </body>
 </html>
