--- a/Homeworks/new.page.html/index.html
+++ b/Homeworks/new.page.html/index.html
@@ -3,36 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Offer</title>
+    <title>Delivery</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <div class="container text-center">
-      <p><right>Комерційна пропозиція</right></p>
-    </div> <!--container text-center-->
-      <h1>Delivery-auto</h1>
-      <p>
-        Логістична компанія «Delivery» – є однією з провідних логістичних
-        компаній України в секторі В2В.<br />
-        З 2001 року Delivery працює на ринку внутрішніх та міжнародних вантажних
-        перевезень.<br />
-        За роки успішної діяльності в сфері надання логістичних та транспортних
-        послуг, дозволили накопичити значний досвід.<br />
-        Також налагодили партнерські взаємовідносини з компаніями, зайнятими в
-        сфері торгівлі, виробництва, сервісу та в інших галузях.
-      </p>
-      <h4>Бізнес-факти «Delivery»:</h4>
-      <ul>
-        <li>500 000 клієнтів щомісяця;</li>
-        <li>більше 1 000 рейсів транспорту;</li>
-        <li>повна відповідальність за вантаж;</li>
-        <li>відповідальне зберігання;</li>
-        <li>
-          великий вибір пакування, можливість розробки пакування відповідно до
-          специфіки вантажу;
-        </li>
-        <li>6 галузевих тарифів.</li>
-      </ul>
+    <div class="app">
+      <div class="center"></div>
+      <header class="header">
+        <h1>Delivery-auto</h1>
+        <ul>
+          <li><a href="https://www.delivery-auto.com/">Website</a></li>
+          <li><a href="#Прайс лист">Прайс лист</a></li>
+        </ul>
+        <h2>Комерційна пропозиція</h2>
+        <div>
+          Логістична компанія «Delivery» – є однією з провідних логістичних
+          компаній України в секторі В2В.
+        </div>
+        <div>
+          З 2001 року Delivery працює на ринку внутрішніх та міжнародних
+          вантажних перевезень.
+        </div>
+        <div>
+          За роки успішної діяльності в сфері надання логістичних та
+          транспортних послуг, дозволили накопичити значний досвід.
+        </div>
+        <div>
+          Також налагодили партнерські взаємовідносини з компаніями, зайнятими в
+          сфері торгівлі, виробництва, сервісу та в інших галузях.
+        </div>
+      </header>
+      <main>
+        <section>
+          <h3>Наша команда</h3>
+          <img src="images/team.jpg" alt="team" title="team"
+        </section>
+        <h4>Бізнес-факти «Delivery»:</h4>
+        <ul>
+          <li>500 000 клієнтів щомісяця;</li>
+          <li>більше 1 000 рейсів транспорту;</li>
+          <li>повна відповідальність за вантаж;</li>
+          <li>відповідальне зберігання;</li>
+          <li>
+            великий вибір пакування, можливість розробки пакування відповідно до
+            специфіки вантажу;
+          </li>
+          <li>6 галузевих тарифів.</li>
+          <section id="Прайс лист">
+            <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Прайс лист</h4>
+          </section>
+          <table>
+            <tr>
+              <th>Вага, кг</th>
+              <th>Вартість по місту</th>
+            </tr>
+            <tr>
+              <td>0,5</td>
+              <td>45</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>50</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>55</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>60</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>80</td>
+            </tr>
+            <tr>
+              <td>30</td>
+              <td>100</td>
+            </tr>
+          </table>
+        </ul>
+      </main>
+      <footer>
+        <h4>Наш головний офіс</h4>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2588.871328734625!2d25.57286448691836!3d49.54358054625582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036ce52678695%3A0x180c693936d01865!2z0JzRgNGW0Y8g0JDQs9GA0L7RhdC-0LvQtNC40L3Qsw!5e0!3m2!1sru!2sua!4v1706911963756!5m2!1sru!2sua"
+          width="250"
+          height="150"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </footer>
     </div>
   </body>
 </html>
