--- a/Homeworks/homework.html/index.html
+++ b/Homeworks/homework.html/index.html
@@ -20,7 +20,7 @@
           <h2>Щербань Михайло Михайлович</h2>
           <a href="https://www.instagram.com/michiaal/">instagram</a>
           <h4>25 років</h4>
-          <img src="images/Писок.jpg" alt="Писок" />
+          <img src="images/misha.jpg" alt="misha" />
           <button>Like!</button>
           <p>
             <b
