add new project

--- a/Homeworks/new.page.html/index.html
+++ b/Homeworks/new.page.html/index.html
@@ -8,13 +8,24 @@
   </head>
   <body>
     <div class="app">
-      <div class="center"></div>
+      <h1>Delivery-auto</h1>
       <header class="header">
-        <h1>Delivery-auto</h1>
-        <ul>
-          <li><a href="https://www.delivery-auto.com/">Website</a></li>
-          <li><a href="#Прайс лист">Прайс лист</a></li>
-        </ul>
+        <nav>
+          <ul>
+            <li><a href="https://www.delivery-auto.com/">Website</a></li>
+            <li><a href="#Прайс лист">Прайс лист</a></li>
+          </ul>
+          <iframe
+            width="300"
+            height="150"
+            src="https://www.youtube.com/embed/wiV8YUcwBZk?si=DUkRVBcpZyTG7ARO"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe> <!--video-->
+        </nav>
+        <!--ofer-->
         <h2>Комерційна пропозиція</h2>
         <div>
           Логістична компанія «Delivery» – є однією з провідних логістичних
@@ -36,8 +47,9 @@
       <main>
         <section>
           <h3>Наша команда</h3>
-          <img src="images/team.jpg" alt="team" title="team"
+          <img src="images/team.jpg" alt="team" title="team" />
         </section>
+        <!--fakts-->
         <h4>Бізнес-факти «Delivery»:</h4>
         <ul>
           <li>500 000 клієнтів щомісяця;</li>
@@ -49,6 +61,13 @@
             специфіки вантажу;
           </li>
           <li>6 галузевих тарифів.</li>
+          <li>
+            Активно підтримуємо українське військо,перевозимо сотні гумунітарних
+            вантажів від партнерів у Європі.
+          </li>
+          <!--audio-->
+          <audio src="./audio/gimn.mp3" controls></audio>
+          <!--price-->
           <section id="Прайс лист">
             <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Прайс лист</h4>
           </section>
@@ -85,6 +104,7 @@
         </ul>
       </main>
       <footer>
+        <!--location-->
         <h4>Наш головний офіс</h4>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2588.871328734625!2d25.57286448691836!3d49.54358054625582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036ce52678695%3A0x180c693936d01865!2z0JzRgNGW0Y8g0JDQs9GA0L7RhdC-0LvQtNC40L3Qsw!5e0!3m2!1sru!2sua!4v1706911963756!5m2!1sru!2sua"
