--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -10,6 +10,7 @@
       <li><a href="./homework.html/index.html">Резюме</a></li>
       <li><a href="./homework.git/README.md">Git</a></li>
       <li><a href="./new.page.html/index.html">New page</a></li>
+      <li><a href="./CSS/index.html">CSS</a></li>
     </ol>
   </body>
 </html>
