add  new projekt

--- a/Homeworks/CSS/index.html
+++ b/Homeworks/CSS/index.html
@@ -8,60 +8,104 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./index.css" />
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
-  />
-</head>
-<body>
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-lg-6">
-        <hr />
-        <p>Резюме від 09.01.2023</p>
-        <h2>Щербань Михайло Михайлович</h2>
-        <a href="https://www.instagram.com/michiaal/">instagram</a>
-        <h4>25 років</h4>
-        <img src="images/misha.jpg" alt="misha" />
+    <link <!--style for h4-- />
+    <style>
+      h4 {
+        color: darkblue;
+        text-align: center;
+      }
+      h2 {
+        color: rgb(1, 1, 19);
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="app">
+      <style>
+        body {
+          background-image: url(./images/fon.jpg);
+        }</style
+      ><!--background-->
+      <h1 id="cv" class="cv">Резюме від 09.01.2023</h1>
+      <!--head-->
+      <header class="header">
+        <img src="images/misha.jpg" alt="misha" /><!--image-->
         <button>Like!</button>
-        <p>
-          <b
-            >I am excited to work in software development.And i am ready to
-            domy best to bet better and benefit your companies</b
-          >
-        </p>
-      </div>
+        <nav class="link">
+          <h4>Контактна інформація:</h4>
+          <address>
+            <ul>
+              <li>
+                <a
+                  href="https://perfect-okna.com.ua/calc/?gad_source=1&gclid=Cj0KCQiAzoeuBhDqARIsAMdH14GCqOeaGl8hMmg8Z7rjnp6OgVWHaVfvAg62B0tczTXYWtTIGxXIZ9AaAqOsEALw_wcB"
+                  >www.perfect-okna.com.ua</a
+                >
+              </li>
+              <!--site-->
+              <li><a href="mailto:misha5026@ukr.net">mail.me</a></li>
+              <!--mail-->
+              <li>
+                <a href="https://www.instagram.com/michiaal/">instagram</a>
+              </li>
+              <li><a href="tel:+380974791652">мій.номер</a></li>
+              <!--tel-->
+            </ul>
+            <!--contact-->
+          </address>
+        </nav>
+      </header>
+      <main>
+        <h2>Щербань Михайло Михайлович</h2>
+        <h4>27.04.11998р</h4>
+        <h4>Освіта</h4>
+        <div class="text">
+          Польща,в місто Жешув Університет інформаційних технологій та
+          менеджменту Логістика,транспорт і спедиція, з 2015 по 2019 (4 роки)
+        </div>
+        <h4>Знання мов:</h4>
+        <div class="text">
+          <ul>
+            <li>Польська ─ просунутий</li>
+            <li>Англійська ─ середній</li>
+          </ul>
+        </div>
+        <div><h4>Про себе:</h4></div>
+        <div class="text">
+          I am excited to work in software development.And i am ready to domy
+          best to bet better and benefit your companies
+        </div>
+        <h4>Додаткова інформація:</h4>
+        <div class="text">
+          <ol>
+            <li>Я з міста Тернопіль.</li>
+            <li>
+              Працюю на посаді експорт-логіста.Відповідаю за доставку вантажіву
+              Європу.
+            </li>
+            <li>Освіта інженерно-економічна.</li>
+            <li>
+              Досвіду в ІТ немає,лише власні знання які самостійно здобував
+              вивчаючи різний матеріал по темі програмування.
+            </li>
+            <li>
+              В гугл пошуку наткнувся на академію Beetroot.Чому вибрав не можу
+              сказати,просто задалося що це вірне рішення.
+            </li>
+            <li>
+              Прийняв не просте рішення змінити напрямок роботи в якому працюю
+              все доросле життя. Професія для мене дуже цікава,надіюся що все
+              вийде.
+            </li>
+          </ol>
+          <!--info-->
+        </div>
+      </main>
+      <footer class="footer">
+        <h4>Портфоліо:</h4>
+        <a href="/Homeworks/new.page.html/index.html">мої роботи</a
+        ><!--job-->
+      </footer>
     </div>
-  </div>
-  <h3>&nbsp;&nbsp;&nbsp;&nbsp; Додаткова інформація:</h3>
-  <div>
-    <blockquote>
-      <ol>
-        <strong>
-          <li>Я з міста Тернопіль</li>
-          <li>
-            Працюю на посаді експорт-логіста.Відповідаю за доставку вантажіву
-            Європу.
-          </li>
-          <li>Освіта інженерно-економічна</li>
-          <li>
-            Досвіду в ІТ немає,лише власні знання які самостійно здобував
-            вивчаючи різний матеріал по темі програмування
-          </li>
-          <li>
-            В гугл пошуку наткнувся на академію Beetroot.Чому вибрав не можу
-            сказати,просто задалося що це вірне рішення.
-          </li>
-          <li>
-            Прийняв не просте рішення змінити напрямок роботи в якому працюю
-            все доросле життя. Професія для мене дуже цікава,надіюся що все
-            вийде
-          </li>
-        </strong>
-      </ol>
-    </blockquote>
-  </div>
-</body>
+  </body>
 </html>
