--- a/Homeworks/new.page.html/index.html
+++ b/Homeworks/new.page.html/index.html
@@ -23,7 +23,8 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
-          ></iframe> <!--video-->
+          ></iframe>
+          <!--video-->
         </nav>
         <!--ofer-->
         <h2>Комерційна пропозиція</h2>
