rework shoping list

--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -11,7 +11,7 @@
       <li><a href="./homework.git/README.md">Git</a></li>
       <li><a href="./new.page.html/index.html">New page</a></li>
       <li><a href="./CSS/index.html">CSS</a></li>
-      <li><a href="./shoping,list/index.html">Shoping-list</a>/li>
+      <li><a href="./shoping,list/index.html">Shoping-list</a></li>
     </ol>
   </body>
 </html>
