--- a/Homeworks/shoping,list/index.html
+++ b/Homeworks/shoping,list/index.html
@@ -11,28 +11,73 @@
   </head>
   <body>
     <div class="app">
-      <h1>My Shopping List for party</h1>
-      <ul class="shopping-list">
-        <input type="checkbox" id="checkbox">
-        <li class="item">chips</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">fruit</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">cheese</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">bread</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">meats</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">dips</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">beer</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">vagetables</li>
-        <input type="checkbox" id="checkbox">
-        <li class="item">deserts</li>
-        <li class="total">Total amount: 10 000k money</li>
+      <!--Header-->
+      <header class="header">
+        <p class="header-title"><b>My Shopping List for party</b></p>
+        <p>Lets go to the mall!</p>
+      </header>
+      <!--Blok-->
+      <ul class="list">
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>A lot of pickles</span>
+              <small class="extra-text">for the next lessons about CSS</small>
+            </div>
+          </label>
+        </li>
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>10 apples</span>
+              <small class="extra-text">for more CSS manipulations</small>
+            </div>
+          </label>
+        </li>
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>20 oranges</span>
+              <small class="extra-text">because they are awesome</small>
+            </div>
+          </label>
+        </li>
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>13 plates</span>
+              <small class="extra-text">hm ... they always dissapear </small>
+            </div>
+          </label>
+        </li>
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>15 bentos</span>
+            </div>
+          </label>
+        </li>
+        <li class="list-item">
+          <label class="list-lable">
+            <input type="checkbox" class="list-checkbox" />
+            <div class="list-content">
+              <span>1 bottle of Sake</span>
+              <small class="extra-text">for my friends </small>
+            </div>
+          </label>
+        </li>
       </ul>
+
+        <!--footer-->
+        <footer class="footer">
+          <p class="footer-text">Bon appetit :)</p>
+        </footer>
+
     </div>
   </body>
 </html>
