--- a/Homeworks/shoping,list/index.html
+++ b/Homeworks/shoping,list/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./index.css" />
+    <!--favicon-->
+    <link rel="icon" href="./images/favicon.png">
   </head>
   <body>
     <div class="app">
