add new project

--- a/Homeworks/new.page.html/index.html
+++ b/Homeworks/new.page.html/index.html
@@ -15,16 +15,8 @@
             <li><a href="https://www.delivery-auto.com/">Website</a></li>
             <li><a href="#Прайс лист">Прайс лист</a></li>
           </ul>
-          <iframe
-            width="300"
-            height="150"
-            src="https://www.youtube.com/embed/wiV8YUcwBZk?si=DUkRVBcpZyTG7ARO"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
           <!--video-->
+          <video src="./vide/video.mp4" type="video/mp4" controls style="width: 50%;"></video>
         </nav>
         <!--ofer-->
         <h2>Комерційна пропозиція</h2>
