--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -12,8 +12,8 @@
       <li><a href="./new.page.html/index.html">New page</a></li>
       <li><a href="./CSS/index.html">CSS</a></li>
       <li><a href="./shoping,list/index.html">Shoping-list</a></li>
-      <li><a href="./Productly/index.html"></a></li>
-      <li><a href="./weather.fortcast/index.html"></a></li>
+      <li><a href="./Productly/index.html"></a>Productly</li>
+      <li><a href="./weather.fortcast/index.html">Weather Forecast</a></li>
     </ol>
   </body>
 </html>
