--- a/Homeworks/weather.fortcast/index.html
+++ b/Homeworks/weather.fortcast/index.html
@@ -8,12 +8,12 @@
     <!--fonts-->
 
     <!--* styles -->
+    <!--normalize-->
+    <link rel="stylesheet" href="./styles/normalize.css" />
     <!--variables-->
     <link rel="stylesheet" href="./styles/wariables.css" />
     <!--main-->
     <link rel="stylesheet" href="./styles/main.css" />
-    <!--normalize-->
-    <link rel="stylesheet" href="./styles/normalize.css" />
     <!--local-->
     <link rel="stylesheet" href="./index.css" />
     <!--weather icon-->
@@ -141,8 +141,24 @@
                 </ul>
               </div>
               <!--step 4-->
-              <div class="forecast-wrapper-table-row"></div>
-              <ul class="forecast-wrapper-table-list"></ul>
+
+              <div class="forecast-wrapper-table-row">
+
+                <ul class="forecast-wrapper-table-list">
+                  
+<!--sydney-->
+<li class="forecast-wrapper-table-item sydney">
+  <p class="city-name">Sydney</p>
+  <p class="city-forecast">
+    17°C
+    <i class="wi wi-rain-wind"></i>
+  </p>
+</li>
+
+
+
+                </ul>
+              </div>
             </div>
           </div>
           <footer>
