--- a/Homeworks/Productly/index.html
+++ b/Homeworks/Productly/index.html
@@ -62,6 +62,10 @@
     <div class="app">
       <!-- * Header -->
       <header class="header">
+        <nav class="nav">
+          <!--homework-->
+          <div><a href="../../Homeworks/index.html">Homeworks</a></div>
+        </nav>
         <div class="wrapper header-wrapper">
           <!-- Logo -->
           <a class="logo" href="/">
