--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -14,6 +14,8 @@
       <li><a href="./shoping,list/index.html">Shoping-list</a></li>
       <li><a href="./Productly/index.html">Productly</a></li>
       <li><a href="./weather.fortcast/index.html">Weather Forecast</a></li>
+      <li><a href="./scss.weather.fortcast/index.html"></a>SCSS</li>
     </ol>
   </body>
 </html>
+Denis Novik
