--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -15,6 +15,8 @@
       <li><a href="./Productly/index.html">Productly</a></li>
       <li><a href="./weather.fortcast/index.html">Weather Forecast</a></li>
       <li><a href="./scss.weather.fortcast/index.html">SCSS</a></li>
+      <li><a href="./SVG/index.html">Icon</a></li>
+      
     </ol>
   </body>
 </html>
