--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -16,7 +16,7 @@
       <li><a href="./weather.fortcast/index.html">Weather Forecast</a></li>
       <li><a href="./scss.weather.fortcast/index.html">SCSS</a></li>
       <li><a href="./SVG/index.html">Icon</a></li>
-      <li><a href="./js/index.html"></a></li>
+      <li><a href="./js/index.html">JS</a></li>
       
     </ol>
   </body>
