add js homework

--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -16,7 +16,8 @@
       <li><a href="./weather.fortcast/index.html">Weather Forecast</a></li>
       <li><a href="./scss.weather.fortcast/index.html">SCSS</a></li>
       <li><a href="./SVG/index.html">Icon</a></li>
-      <li><a href="./js/index.html">JS</a></li>
+      <li><a href="./js/js.base/index.html">JS Основи</a></li>
+      <li><a href="./js/js.types/types.html">JS типи данних та оператори</a></li>
       
     </ol>
   </body>
