--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -18,7 +18,8 @@
       <li><a href="./SVG/index.html">Icon</a></li>
       <li><a href="./js/js.base/index.html">JS Основи</a></li>
       <li><a href="./js/js.types/types.html">JS типи данних та оператори</a></li>
-      
+      <li><a href="./js/js.cycles/index.html">JS Цикли</a></li>
+      <li><a href="./js/js.objects/index.html">JS Об'єкти</a></li>
     </ol>
   </body>
 </html>
