--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -19,7 +19,7 @@
       <li><a href="./js/js.base/index.html">JS Основи</a></li>
       <li><a href="./js/js.types/types.html">JS типи данних та оператори</a></li>
       <li><a href="./js/js.cycles/index.html">JS Цикли</a></li>
-      <li><a href="./js/js.objects/index.html">JS Об'єкти</a></li>
+      <li><a href="./js/js.object/index.html">JS Об'єкти</a></li>
     </ol>
   </body>
 </html>
