--- a/Homeworks/js/js.objects/index.html
+++ b/Homeworks/js/js.objects/index.html
@@ -6,6 +6,6 @@
   <title>Object</title>
 </head>
 <body>
-  <script defer src="../objects/object.js"></script>
+  <script defer src="../js.objects/object.js"></script>
 </body>
 </html>
