JS function and arrays

--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -20,6 +20,8 @@
       <li><a href="./js/js.types/types.html">JS типи данних та оператори</a></li>
       <li><a href="./js/js.cycles/index.html">JS Цикли</a></li>
       <li><a href="./js/js.objects/index.html">JS Об'єкти</a></li>
+      <li><a href="./js.function/index.html">JS Функції</a></li>
+      <li><a href="./js.arrays/index.html">JS Масиви</a></li>
     </ol>
   </body>
 </html>
