--- a/Homeworks/index.html
+++ b/Homeworks/index.html
@@ -22,6 +22,7 @@
       <li><a href="./js/js.objects/index.html">JS Об'єкти</a></li>
       <li><a href="./js.function/index.html">JS Функції</a></li>
       <li><a href="./js.arrays/index.html">JS Масиви</a></li>
+      <li><a href="./DOM/index.html">JS Масиви</a></li>
     </ol>
   </body>
 </html>
